--- a/bin/src/main/resources/application.yml
+++ b/bin/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
       ddl-auto: none
   datasource:
     url: jdbc:mysql://localhost:3306/CalentanaDB?createDatabaseIfNotExist=true
-    username : root
-    password: admin
+    username : ceiba
+    password: ceiba
 server:
-  port: 8282
+  port: 8081
