Se agrega seguridad al proyecto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
 spring.liquibase.change-log=classpath:database/changelog-master.xml
+
+security.oauth2.resource.filter-order=3
+
+#https://www.allkeysgenerator.com/Random/Security-Encryption-Key-Generator.aspx
+security.signing-key=MaYzkSjmkzPC57L
+security.encoding-strength=256
+security.security-realm=Spring Boot JWT
+
+security.jwt.client-id=calentanapp
+security.jwt.client-secret=calentana44p
+security.jwt.grant-type=password
+security.jwt.scope-read=read
+security.jwt.scope-write=write
+security.jwt.resource-ids=calentanaresourceid
+
+server.port=8081
